--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,6 @@ header {
   color: #fff;
 }
 
-/* 
-What happens when we set the display property to flex?
-The flex container becomes flexible 
-*/
 nav {
   display: flex;
   background-color: #d8a47f;
@@ -30,10 +26,6 @@ nav a {
   text-align: center;
 }
 
-/* 
-What is the flex-wrap property?
-It specifies whether the flex items should wrap or not 
-*/
 main {
   display: flex;
   flex-wrap: wrap;
@@ -51,12 +43,16 @@ footer {
   text-align: center;
   background: #13293d;
   color: #fff;
+  display: flex;
+  justify-content: center;
+ 
 }
 
-/* 
-What does the justify-content property do?
-It is used to align the flex items; in our case, the product cards 
-*/
+.footerStyle {
+  padding: 20px;
+}
+
+
 .products {
   flex: 4;
   background-color: #fff;
@@ -66,12 +62,7 @@ It is used to align the flex items; in our case, the product cards
   justify-content: center;
 }
 
-/* 
-What is the flex property a shorthand property for?
-It is a shorthand property for the flex-grow, flex-shrink, and flex-basis properties 
-What is it doing here?
-We are making the product card not growable, not shrinkable, and with an initial length of 400px 
-*/
+
 .card {
   border-style: solid;
   border-width: 1px;
@@ -92,12 +83,20 @@ We are making the product card not growable, not shrinkable, and with an initial
   width: 100%;
 }
 
-/* 
-What does the flex-direction property define?
-It defines in which direction the container wants to stack the flex items
-What is it doing here? 
-We are telling the main body and navbar to stack vertically in a column
-*/
+h1 {
+  font-size: 100px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  padding-right: 20px;
+}
+
+
+
 @media screen and (max-width: 768px) {
   main,
   nav {
